applications/tenants/le-portail/overlays/production/grist/ingressroute.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grist
  namespace: ${tenant}-grist
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grist.${domain}`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: grist
          port: 8484
    - match: Host(`doc.${domain}`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: grist
          port: 8484
  tls:
    secretName: wildcard.${domain}.tls
